Avances de angular con el curso de Dev Talleres

--- a/Angular/gifs-app/tsconfig.json
+++ b/Angular/gifs-app/tsconfig.json
@@ -3,6 +3,12 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@gifs/*": ["src/app/gifs/*"],
+      "@shared/*": ["src/app/shared/*"],
+      "@environments/*": ["src/environments/*"]
+    },
     "outDir": "./dist/out-tsc",
     "strict": true,
     "noImplicitOverride": true,
